# delta

./: .gitignore  .vimrc  Africa.pkl  Cancer_visualization.ipynb  Dash_application.py  Dockerfile  Europe.pkl  Makefile  North_america.pkl  README.md  TODO  Untitled.ipynb  data_cleaning.ipynb  delta.py  premier_tour.ipynb  presidentielle  pybd.ipynb  pyproject.toml  requirements.txt  second_tour.ipynb  topkl.py  update_delta.sh
ABNZ_Pollution_aux_US_et_corrélation_avec_le_prix_du_carburant/: get_data.py  pollution.py
ACJW_MusicPopularityFactor/: Music.py  README.md  custom.geo_1.json
ADHD_Movies/: movies.py
ALVS_Greenhouse_gas_and_Environmental_Policy_in_Europe/: README.md  beta.ipynb  cleaning_analysis_data.ipynb  environment.py  get_data.py
ALVS_sujet/: beta.ipynb  environment.py
AMEG_vaccination/: AMEG_vaccination.py  get_data.py  text.py
APAAL_criminalite_education/: README.md  crimes-map.ipynb  get_data.ipynb  (+6 more)
pbmc_sujet/: dataprocessing.py  main.py  pbmc.py  pbmc_sujet.py  pyproject.toml
pbmc_sujet/data/: get_data.py
pbmc_sujet/src/: main.py
pbmc_sujet/src/data/: get_data.py
pbmc_sujet/tests/: test_pbmc_sujet.py
ps-ap_chessgames/: .gitignore  pyproject.toml
ps-ap_chessgames/data/: get_data.py  medium_db.pgn  short_lichess_db.pgn
ps-ap_chessgames/src/ps_ap_chessgames/: app.py
ps-ap_chessgames/tests/: test_ps_ap_chessgames.py
ybjd_deces_en_france_selon_le_revenu_par_departement/: Projet.ipynb  main.py  pyproject.toml  ybjd_deces_en_france_selon_le_revenu_par_departement.py
ybjd_deces_en_france_selon_le_revenu_par_departement/data/: 2022-01-28_deces_quotidiens_departement.xlsx  TCRD_022.xlsx  estim-pop-dep-sexe-1975-2022.xlsx  get_data.py
ybjd_deces_en_france_selon_le_revenu_par_departement/src/ybjd_deces_en_france_selon_le_revenu_par_departement/: Projet.ipynb  ybjddeces_en_france_selon_le_revenu_par_departement.py
ybjd_deces_en_france_selon_le_revenu_par_departement/tests/: test_mon_projet.py
(+10457 files in other folders)
