[tool.poetry]
name = "pbmc_sujet"
version = "0.1.0"
description = ""
authors = ["Philippe Bouchet <philippe.bouchet@epita.fr>", "Michail Chatzizacharias <michail.chatzizacharias@epita.fr>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
