[tool.poetry]
name = "ps-ap_chessgames"
version = "0.1.0"
description = ""
authors = [
  "Pierre Seguin <pierre.seguin@epita.fr>",
  "Alexandre Poignant <alexandre.poignant@epita.fr>",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
