[tool.poetry]
name = "ps-ap_chessgames"
version = "0.1.0"
description = ""
authors = [
  "Pierre Seguin <pierre.seguin@epita.fr>",
  "Alexandre Poignant <alexandre.poignant@epita.fr>",
]

[tool.poetry.dependencies]
python = "^3.9"
bz2file = "^0.98"
regex = "^2022.4.24"
pandas = "^1.3.4"
wget = "^3.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
