[tool.poetry]
name = "ybdj_deces_en_france_selon_le_revenu_par_departement"
version = "0.1.0"
description = "#FIXME"
authors = ["Yann Buisson <yann.buisson@epita.fr>", "Julien Delaforge <julien.delaforge@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
